call a component as a element or as a tag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     	<h3>This is the AppComponent!</h3>
     	<hr>
-    	<!-- <app-server></app-server> -->
-    	<!-- <div app-server></div> -->
+    	<!-- <app-server></app-server> as a html element tag-->
+    	<!-- <div app-server></div> as a html element attribute -->
+    	<div app-server></div> 
     </div>
   </div>
 </div>        
