call a component as a element or as a tag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
     	<hr>
     	<!-- <app-server></app-server> as a html element tag-->
     	<!-- <div app-server></div> as a html element attribute -->
-    	<div app-server></div> 
+    	<!-- <div class="app-server"></div> --> 
+    	<app-server></app-server>
     </div>
   </div>
 </div>        
